--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "heroku-postbuild": "ng build --prod",
+    "start": "node app.js",
+    "postinstall": "ng build --aot --prod && mv dist/* ."
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
