--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node app.js"
   },
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
@@ -12,6 +16,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-validator": "^6.6.1",
+    "heroku": "^7.43.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysqli": "^3.0.11",
