--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "install": "node-gyp rebuild"
+    "start": "node app.js"
   },
   "engines": {
     "node": "12.18.3",
