--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node app.js"
   },
   "engines": {
-    "node": "12.18.3",
-    "npm": "6.14.6"
+    "node": "12.18.3"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
