--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start:dev": "nodemon ./bin/www"
   },
   "engines": {
-    "node": "12.18.3"
+    "node": "12.14.1",
+    "npm": "6.14.2"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
